# code-agent

./: .code_agent_memory.md  .gitignore  CODE_AGENT.md  DEVELOPMENT.md  IMPROVEMENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
src/code_agent/: __init__.py  __main__.py  cli.py
src/code_agent/agent/: __init__.py  compactor.py  core.py  memory.py  prompts.py
src/code_agent/config/: __init__.py  models.py
src/code_agent/tools/: __init__.py  agent_tool.py  base.py  code_edit.py  coordinator.py  file.py  git.py  lsp.py  mcp.py  monitor.py  plan_mode.py  project.py  registry.py  shell.py  skills.py  task.py  tool_search.py  web.py  workflow.py
src/code_agent/ui/: __init__.py  chat.py  commands.py  completion.py  console.py  permission.py  window.py
src/code_agent/utils/: __init__.py  api_diagnostics.py  bash_classifier.py  buddy.py  context_report.py  cost_tracker.py  custom_commands.py  logger.py  paths.py  permissions.py  persistent_memory.py  plan.py  poor_mode.py  project_instructions.py  sandbox.py  security.py  session.py  skills.py  subagents.py  token_budget.py  tool_hooks.py  transcript.py  ultraplan.py
tests/: test_cli.py
tests/test_agent/: test_core.py  test_memory.py
tests/test_tools/: test_agent_tool.py  test_code_edit.py  test_coordinator.py  test_file_tools.py  test_git.py  test_lsp.py  test_mcp.py  test_monitor.py  test_p1_registry.py  test_project.py  test_registry.py  test_shell.py  test_skills.py  test_tool_search.py  test_web.py  test_workflow.py
tests/test_ui/: __init__.py  test_completion.py  test_permission.py  test_window.py
tests/test_utils/: test_api_diagnostics.py  test_buddy.py  test_context_report.py  test_custom_commands.py  test_permissions.py  test_persistent_memory.py  test_poor_mode.py  test_sandbox.py  test_security.py  test_session.py  test_skills.py  test_tool_hooks.py  test_transcript.py
